# github-events

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  plan.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: build.yml
src/github_events/: __init__.py  dependencies.py  github.py  main.py  models.py  responses.py  routes.py  store.py  worker.py
src/github_events/static/: dashboard.html  index.html
tst/github_events/: test_github.py  test_store.py  test_streamer.py
tst/github_events/mocks/: events.json
