[project]
name = "github-events"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
    "redis>=7.3.0",
    "uvicorn>=0.41.0",
]
[project.optional-dependencies]
dev = [
    "fakeredis>=2.21.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]